<resources>
    <string name="app_name">Ecofiltro</string>
    <string name="title_activity_learn_more">LearnMore</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_how_it_works">HowItWorks</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stories">Stories</string>
    <string name="title_activity_story">Story</string>
    <string name="title_activity_why_eco">WhyEco</string>
    <string name="title_activity_bad_water">BadWater</string>
    <string name="faqs">FAQs</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="contact_us">Contact Us</string>
    <string name="find_us_on">Find us on</string>
    <string name="guatemala_nkm_77_aldea_san_lorenzo_el_cubo_nciudad_vieja_sacatepequez_n_502_7955_8555_ninfo_ecofiltro_com">GUATEMALA KM 77, Aldea San Lorenzo El Cubo Ciudad Vieja, Sacatepequez + (502) 7955-8555  info@ecofiltro.com</string>
    <string name="phone_502_7955_8555">Phone: 502.7955.8555</string>
    <string name="email_info_eofiltro_com">Email: info@eofiltro.com</string>
    <string name="km_77_aldea_san_lorenzo_el_cubo_nciudad_vieja_sacatepequez">KM 77, Aldea San Lorenzo El Cubo Ciudad Vieja, Sacatepequez</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="learn_more_about_ecofiltro">Learn More About Ecofiltro</string>
    <string name="learn_more_about">Learn More About</string>
    <string name="logo">logo</string>
    <string name="stories_with_ecofiltro">Stories with Ecofiltro</string>
    <string name="how_it_works">How it works?</string>
    <string name="why_us">Why us?</string>
    <string name="bad_water">Bad Water?</string>
    <string name="story_with_eco">story with eco</string>
    <string name="bad_water_materials">bad water materials</string>
    <string name="environmental_friendly">Environmental friendly</string>
    <string name="your_email_address">Your email address</string>
    <string name="leave_your_question_here">Leave your question here</string>
    <string name="if_the_above_doesn_t_answer_your_question_please_add_it_below_and_we_ll_get_back_to_you_with_an_anwser">If the above doesn\'t answer your question, please add it below and we\'ll get back to you with an anwser.</string>


</resources>
