<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactUs"
    tools:showIn="@layout/activity_contact_us">

    <TextView
        android:id="@+id/ContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactUs">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:contentDescription="Location"
                android:orientation="horizontal"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/km_77_aldea_san_lorenzo_el_cubo_nciudad_vieja_sacatepequez"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:text="@string/phone_502_7955_8555"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:text="@string/email_info_eofiltro_com"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="200dp"
                android:layout_height="195dp"
                android:layout_gravity="center_horizontal"

                app:srcCompat="@drawable/map" />

            <EditText
                android:id="@+id/NameInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/PhoneInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/EmailInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/MessageInput"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/ContactUsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>