<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LearnMore">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:baselineAligned="false">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="24dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/BadWaterButton"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:contentDescription="@string/bad_water_materials"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/dirtywater" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="24dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/StoryButton"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:contentDescription="@string/story_with_eco"
                        android:fadingEdge="horizontal|vertical"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/story" />
                </android.support.v7.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="83dp">

                <TextView
                    android:id="@+id/badWater"
                    android:layout_width="100dp"
                    android:layout_height="52dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/bad_water"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    app:layout_column="2"
                    app:layout_row="0"
                    tools:text="Bad water" />

                <TextView
                    android:id="@+id/story"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="50dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="20dp"
                    android:text="@string/stories_with_ecofiltro"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    tools:text="Ecofiltro Stories" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="24dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/HowItWorksButton"
                        android:layout_width="130dp"
                        android:layout_height="127dp"
                        app:srcCompat="@drawable/howitworksicon" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="24dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/whyUsButton"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        app:srcCompat="@drawable/whyus" />
                </android.support.v7.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/howitwork"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/how_it_works"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_row="0"
                    tools:text="How it works" />

                <TextView
                    android:id="@+id/whyUsText"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/why_us"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:text="Why Ecofiltro" />

            </TableRow>

            <TextView
                android:id="@+id/FAQbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FAQs"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/ContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>